# TodoList

./: TODO  app.py  forms.py  main.py  models.py  pyproject.toml  task.py  views.py
templates/: base.html  footer.html  header.html  index.html
